--- a/templates/homepage/index_about_me.html
+++ b/templates/homepage/index_about_me.html
@@ -1,134 +1,69 @@
+{% extends 'homepage/base.html' %}
 {% load i18n %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-<title>TCHIIZ | {% trans "About us" %} </title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- Favicon -->
-<link href="{% static 'homepage/img/icon/favicon.ico' %}" rel="shortcut icon"/>
-
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-    body, h1, h2, h3, h4, h5, h6 {
-        font-family: "Montserrat", sans-serif
-    }
-
-    .w3-row-padding img {
-        margin-bottom: 12px
-    }
-
-    /* Set the width of the sidebar to 120px */
-    .w3-sidebar {
-        width: 120px;
-        background: #222;
-    }
-
-    /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
-    #main {
-        margin-left: 120px
-    }
-
-    /* Remove margins from "page content" on small screens */
-    @media only screen and (max-width: 600px) {
-        #main {
-            margin-left: 0
+{% block customCSS %}
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        body, h1, h2, h3, h4, h5, h6 {
+            font-family: "Montserrat", sans-serif
         }
-    }
-</style>
 
-<body class="w3-black">
+        body {
+            height: 100vh !important;
+            color: #fff !important;
+            background-color: #000 !important;
+        }
 
-<!-- Icon Bar (Sidebar - hidden on small screens) -->
-<nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-    <!-- Avatar image in top left corner -->
-    <img src="{% static 'homepage/img/roos_laurore.png' %}" style="width:100%">
-    <a href="{% url 'homepage:index' %}" class="w3-bar-item w3-button w3-padding-large w3-black">
-        <i class="fa fa-home w3-xxlarge"></i>
-        <p>{% trans "HOME" %}</p>
-    </a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-        <i class="fa fa-user w3-xxlarge"></i>
-        <p>{% trans "ABOUT" %}</p>
-    </a>
-    <a href="{% url 'pf:index_portfolio' %}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-        <i class="fa fa-eye w3-xxlarge"></i>
-        <p>{% trans "PORTFOLIO" %}</p>
-    </a>
-    <a href="{% url 'flatpages:contact' %}" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-        <i class="fa fa-envelope w3-xxlarge"></i>
-        <p>{% trans "CONTACT" %}</p>
-    </a>
-</nav>
+        .w3-row-padding img {
+            margin-bottom: 12px
+        }
 
-<!-- Navbar on small screens (Hidden on medium and large screens) -->
-<div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
-    <div class="w3-bar w3-black w3-opacity w3-hover-opacity-off w3-center w3-small">
-        <a href="{% url 'homepage:index' %}" class="w3-bar-item w3-button"
-           style="width:25% !important">{% trans "HOME" %}</a>
-        <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">{% trans "ABOUT" %}</a>
-        <a href="#" class="w3-bar-item w3-button" style="width:25% !important">{% trans "PORTFOLIO" %}</a>
-        <a href="{% url 'flatpages:contact' %}" class="w3-bar-item w3-button"
-           style="width:25% !important">{% trans "CONTACT" %}</a>
-    </div>
-</div>
+        .main-menu li a {
+            color: whitesmoke !important;
+        }
 
-<!-- Page Content -->
-<div class="w3-padding-large" id="main">
-    <!-- Header/Home -->
-    <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-        <h1 class="w3-jumbo"><span class="w3-hide-small">{% trans "I'm Roos Laurore" %}</span> &nbsp;</h1>
-        <p>{% trans "Photographer" %}</p>
-        <img src="{% static 'homepage/img/roos_laurore.png' %}" alt="boy" class="w3-image" width="492" height="608">
-    </header>
+        /* Remove margins from "page content" on small screens */
+        @media only screen and (max-width: 600px) {
+            #main {
+                margin-left: 0
+            }
+        }
+    </style>
+{% endblock %}
+{% block description %}
+    {% trans "Professional photography services for all occasions - portraits, landscapes, events. High-quality results and personalized attention." %}
+{% endblock %}
+{% block logoImg %}
+    <img src="{% static 'homepage/img/logos/logo-white.png' %}" style="height: 60px; width: 100px" alt="logo">
+{% endblock %}
+{% block title %}
+    TCHIIZ | {% trans "About us" %}
+{% endblock %}
+{% block body %}
+    <div class="w3-padding-large" id="main">
+        <!-- Header/Home -->
+        <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
+            <h1 class="w3-jumbo"><span class="w3-hide-small">{% trans "I'm Roos Laurore" %}</span> &nbsp;</h1>
+            <p>{% trans "Photographer" %}</p>
+            <img src="{% static 'homepage/img/roos_laurore.png' %}" alt="Hand on window's airplane" class="w3-image" width="342" height="458">
+        </header>
 
-    <!-- About Section -->
-    <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
-        <h2 class="w3-text-light-grey"></h2>
-        <hr style="width:200px" class="w3-opacity">
-        <p>
-            {% blocktranslate %}
-                Born in the 90's, I am very passionate about everything related to art, music and
-                photography. I spent 1 year in France doing photography and sharing with others in
-                the field. I learned how to use Photoshop, and I'm really good at it. While in
-                France, I landed my first wedding gig on a yatch. I am actually interested in
-                computer science and long term investing. I'm planning to travel a little in the
-                next years in Indonesia, Greece and China. Long term goal : Digital Nomad.
-            {% endblocktranslate %}
-        </p>
-        <h3 class="w3-padding-16 w3-text-light-grey">{% trans "My Skills" %}s</h3>
-        <p class="w3-wide">{% trans "Photography" %}</p>
-        <div class="w3-white">
-            <div class="w3-dark-grey" style="height:28px;width:95%"></div>
-        </div>
-        <p class="w3-wide">{% trans "Photoshop" %}</p>
-        <div class="w3-white">
-            <div class="w3-dark-grey" style="height:28px;width:80%"></div>
-        </div>
-        <br>
-
-        <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
-            <div class="w3-quarter w3-section">
-                <span class="w3-xlarge">11+</span><br>
-                {% trans "Partners" %}
-            </div>
-            <div class="w3-quarter w3-section">
-                <span class="w3-xlarge">55+</span><br>
-                {% trans "Projects Done" %}
-            </div>
-            <div class="w3-quarter w3-section">
-                <span class="w3-xlarge">89+</span><br>
-                {% trans "Happy Clients" %}
-            </div>
-            <div class="w3-quarter w3-section">
-                <span class="w3-xlarge">150+</span><br>
-                {% trans "Photoshoot" %}
-            </div>
+        <!-- About Section -->
+        <div class="w3-content w3-justify w3-text-grey" id="about">
+            <h2 class="w3-text-light-grey"></h2>
+            <hr style="width:200px" class="w3-opacity">
+            <p>
+                {% blocktranslate %}
+                    Born in the 90's, I am very passionate about everything related to art, music and
+                    photography. I spent 1 year in France doing photography and sharing with others in
+                    the field. I learned how to use Photoshop, and I'm really good at it. While in
+                    France, I landed my first wedding gig on a yatch. I am actually interested in
+                    computer science and long term investing. I'm planning to travel a little in the
+                    next years in Indonesia, Greece and China. Long term goal : Digital Nomad.
+                {% endblocktranslate %}
+            </p>
         </div>
     </div>
-</div>
-</body>
-</html>
+{% endblock %}
