updated about me menu page

--- a/templates/homepage/index_about_me.html
+++ b/templates/homepage/index_about_me.html
@@ -24,6 +24,14 @@
             color: whitesmoke !important;
         }
 
+        .main-menu li {
+            background-color: #0b0b0b;
+        }
+
+        .main-menu li .sub-menu {
+            background-color: #0b0b0b;
+        }
+
         /* Remove margins from "page content" on small screens */
         @media only screen and (max-width: 600px) {
             #main {
