Updated homepage Remove about me part under hero slider Update css so hero slider take whole height

--- a/static/homepage/css/styles.css
+++ b/static/homepage/css/styles.css
@@ -169,10 +169,15 @@ ol {
 .hero-section {
 	clear: both;
 	position: relative;
+	height: 90vh !important;
+}
+
+.hero-slider {
+	height: 41vh !important;
 }
 
 .hero-item {
-	height: 278px;
+	height: 41vh !important;
 	position: relative;
 }
 
