--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -22,49 +22,49 @@
             {% endfor %}
         </div>
     </div>
-    <!-- Hero section end  -->
-
-    <!-- Promotion Cards -->
-    <section class="pricing-table">
-        <div class="container">
-            <div class="block-heading">
+{#    <!-- Hero section end  -->#}
+{##}
+{#    <!-- Promotion Cards -->#}
+{#    <section class="pricing-table">#}
+{#        <div class="container">#}
+{#            <div class="block-heading">#}
                 {#                <h2>{% trans "" %}</h2>#}
-                <p class="text-black important" style="color: black; font-weight: 600">
-                    {% trans "Click here to book" %}
-                </p>
-                <a href="{% url 'homepage:services_offered' %}" class="btn btn-primary btn-xl js-scroll-trigger"
-                   style="background-color: #6c757d;">{% trans "Book Now" %}</a>
-            </div>
-        </div>
-    </section>
-    <!-- Promotion Cards finished-->
-
-    <!-- Intro section   -->
-    <section class="intro-section">
-        <div class="intro-warp">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-xl-8 col-lg-7 p-0">
-                        <div class="intro-text">
-                            <h1 style="padding-left: 5px; padding-right: 5px; font-size:38px;">
-                                {% trans "My name is Roos Laurore" %}.
-                            </h1>
-                            <h2 style="padding-left: 5px; padding-right: 5px; font-size:38px;">
-                                {% trans "I’m a photographer" %}</h2>
-                            <p>
-                                {% blocktranslate %}
-                                    Born in the 90's, I am very passionate about everything related to art, music and
-                                    photography. I spent 1 year in France doing photography and sharing with others in
-                                    the field. I learned how to use Photoshop, and I'm really good at it. While in
-                                    France, I landed my first wedding gig on a yatch. I am actually interested in
-                                    computer science and long-term investing. I'm planning to travel a little in the
-                                    next years in Indonesia, Greece and China. Long-term goal: Digital Nomad.
-                                {% endblocktranslate %}
-                            </p>
-                            <a href="{% url 'pf:index_portfolio' %}"
-                               class="sp-link">{% trans "Take a look @my portfolio" %}</a>
-                        </div>
-                    </div>
+{#                <p class="text-black important" style="color: black; font-weight: 600">#}
+{#                    {% trans "Click here to book" %}#}
+{#                </p>#}
+{#                <a href="{% url 'homepage:services_offered' %}" class="btn btn-primary btn-xl js-scroll-trigger"#}
+{#                   style="background-color: #6c757d;">{% trans "Book Now" %}</a>#}
+{#            </div>#}
+{#        </div>#}
+{#    </section>#}
+{#    <!-- Promotion Cards finished-->#}
+{##}
+{#    <!-- Intro section   -->#}
+{#    <section class="intro-section">#}
+{#        <div class="intro-warp">#}
+{#            <div class="container-fluid">#}
+{#                <div class="row">#}
+{#                    <div class="col-xl-8 col-lg-7 p-0">#}
+{#                        <div class="intro-text">#}
+{#                            <h1 style="padding-left: 5px; padding-right: 5px; font-size:38px;">#}
+{#                                {% trans "My name is Roos Laurore" %}.#}
+{#                            </h1>#}
+{#                            <h2 style="padding-left: 5px; padding-right: 5px; font-size:38px;">#}
+{#                                {% trans "I’m a photographer" %}</h2>#}
+{#                            <p>#}
+{#                                {% blocktranslate %}#}
+{#                                    Born in the 90's, I am very passionate about everything related to art, music and#}
+{#                                    photography. I spent 1 year in France doing photography and sharing with others in#}
+{#                                    the field. I learned how to use Photoshop, and I'm really good at it. While in#}
+{#                                    France, I landed my first wedding gig on a yatch. I am actually interested in#}
+{#                                    computer science and long-term investing. I'm planning to travel a little in the#}
+{#                                    next years in Indonesia, Greece and China. Long-term goal: Digital Nomad.#}
+{#                                {% endblocktranslate %}#}
+{#                            </p>#}
+{#                            <a href="{% url 'pf:index_portfolio' %}"#}
+{#                               class="sp-link">{% trans "Take a look @my portfolio" %}</a>#}
+{#                        </div>#}
+{#                    </div>#}
 {#                    <div class="col-xl-6 col-lg-5 p-0">#}
 {#                        <div class="skill-warp">#}
 {#                            <div class="single-progress-item">#}
@@ -81,9 +81,9 @@
 {#                            </div>#}
 {#                        </div>#}
 {#                    </div>#}
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Intro section end  -->
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </section>#}
+{#    <!-- Intro section end  -->#}
 {% endblock %}
