--- a/templates/homepage/index_about_me.html
+++ b/templates/homepage/index_about_me.html
@@ -53,7 +53,7 @@
     <div class="w3-padding-large" id="main">
         <!-- Header/Home -->
         <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
-            <h1 class="w3-jumbo"><span class="w3-hide-small">{% trans "I'm Roos Laurore" %}</span> &nbsp;</h1>
+            <h1 class="w3-jumbo"><span>{% trans "I'm Roos Laurore" %}</span> &nbsp;</h1>
             <p>{% trans "Photographer" %}</p>
             <img src="{% static 'homepage/img/roos_laurore.png' %}" alt="Hand on window's airplane" class="w3-image" width="342" height="458">
         </header>
