--- a/templates/static_pages_and_forms/contact.html
+++ b/templates/static_pages_and_forms/contact.html
@@ -2,6 +2,8 @@
 {% load i18n %}
 {% block title %}{% trans "Contact us" %}{% endblock %}
 {% block canonical %}{% url 'flatpages:contact' %}{% endblock %}
+{% block search_button_color %}black{% endblock %}
+{% block bars_color %}black{% endblock %}
 {% block description %}
     {% blocktranslate %}
         Get in touch with us for all your photography needs. Contact us today for booking, consultation, or any other
