--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -1,8 +1,13 @@
 {% extends 'homepage/base.html' %}
 {% load i18n %}
 {% load static %}
+{% block search_button_color %}white{% endblock %}
+{% block bars_color %}white{% endblock %}
+{% block logoImg %}
+    <img src="{% static 'homepage/img/logos/logo-white.png' %}" style="height: 60px; width: 100px" alt="logo">
+{% endblock %}
 {% block priceTableCSS %}
-    <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/priceCards.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/homepage.css' %}"/>
 {% endblock %}
 {% block description %}
     {% trans "Professional photography services for all occasions - portraits, landscapes, events. High-quality results and personalized attention." %}
