--- a/templates/homepage/index_about_me.html
+++ b/templates/homepage/index_about_me.html
@@ -43,6 +43,8 @@
 {% block description %}
     {% trans "Professional photography services for all occasions - portraits, landscapes, events. High-quality results and personalized attention." %}
 {% endblock %}
+{% block search_button_color %}white{% endblock %}
+{% block bars_color %}white{% endblock %}
 {% block logoImg %}
     <img src="{% static 'homepage/img/logos/logo-white.png' %}" style="height: 60px; width: 100px" alt="logo">
 {% endblock %}
