--- a/templates/homepage/index_about_me.html
+++ b/templates/homepage/index_about_me.html
@@ -1,6 +1,9 @@
 {% extends 'homepage/base.html' %}
 {% load i18n %}
 {% load static %}
+{% block canonical %}
+	{% url 'homepage:about' %}
+{% endblock %}
 {% block customCSS %}
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
