Updated promotions page to link to service page

--- a/templates/client/booking_and_promotions/promotions.html
+++ b/templates/client/booking_and_promotions/promotions.html
@@ -121,25 +121,25 @@
                 <tr style="height: 73px;">
                     <td class="u-align-left u-border-1 u-border-palette-5-dark-2 u-table-cell"></td>
                     <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">
-                        <a href="{% url 'client:book_me_session' 1 %}"
+                        <a href="{% url 'homepage:services_offered' %}"
                            class="u-btn u-btn-round u-button-style u-palette-2-base u-radius-50 u-text-body-alt-color u-btn-1">
                             {% trans "book now" %}
                         </a>
                     </td>
                     <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">
-                        <a href="{% url 'client:book_me_session' 2 %}"
+                        <a href="{% url 'homepage:services_offered' %}"
                            class="u-btn u-btn-round u-button-style u-palette-2-base u-radius-50 u-text-body-alt-color u-btn-2">
                             {% trans "book now" %}
                         </a>
                     </td>
                     <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">
-                        <a href="{% url 'client:book_me_session' 3 %}"
+                        <a href="{% url 'homepage:services_offered' %}"
                            class="u-btn u-btn-round u-button-style u-palette-2-base u-radius-50 u-text-body-alt-color u-btn-3">
                             {% trans "book now" %}
                         </a>
                     </td>
                     <td class="u-border-1 u-border-palette-5-dark-2 u-table-cell">
-                        <a href="{% url 'client:book_me_session' 4 %}"
+                        <a href="{% url 'homepage:services_offered' %}"
                            class="u-btn u-btn-round u-button-style u-palette-2-base u-radius-50 u-text-body-alt-color u-btn-3">
                             {% trans "book now" %}
                         </a>
