--- a/templates/homepage/index_about_me.html
+++ b/templates/homepage/index_about_me.html
@@ -47,7 +47,7 @@
 {% block search_button_color %}white{% endblock %}
 {% block bars_color %}white{% endblock %}
 {% block logoImg %}
-    <img src="{% static 'homepage/img/logos/logo-white.png' %}" style="height: 60px; width: 100px" alt="logo">
+    <img src="{% static 'homepage/img/logos/logo-white.webp' %}" style="height: 60px; width: 100px" alt="logo">
 {% endblock %}
 {% block title %}
     TCHIIZ | {% trans "About us" %}
@@ -58,7 +58,7 @@
         <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
             <h1 class="w3-jumbo"><span>{% trans "I'm Roos Laurore" %}</span> &nbsp;</h1>
             <p>{% trans "Photographer" %}</p>
-            <img src="{% static 'homepage/img/roos_laurore.png' %}" alt="Hand on window's airplane" class="w3-image" width="342" height="458">
+            <img src="{% static 'homepage/img/roos_laurore.webp' %}" alt="Hand on window's airplane" class="w3-image" width="342" height="458">
         </header>
 
         <!-- About Section -->
