--- a/templates/portfolio/index_portfolio.html
+++ b/templates/portfolio/index_portfolio.html
@@ -9,7 +9,7 @@
 {% block search_button_color %}white{% endblock %}
 {% block bars_color %}white{% endblock %}
 {% block logoImg %}
-    <img src="{% static 'homepage/img/logos/logo-white.png' %}" style="height: 60px; width: 100px" alt="logo">
+    <img src="{% static 'homepage/img/logos/logo-white.webp' %}" style="height: 60px; width: 100px" alt="logo">
 {% endblock %}
 {% block priceTableCSS %}
     <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/magnific-popup.css' %}"/>
