Optimize css retrieval by opening connections before loading

--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -19,12 +19,12 @@
     <!-- Establish network connection -->
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
 
-    <!-- Fetch the CSS file as soon as possible -->
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" as="style">
-
-    <!-- Apply the CSS file -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- Preload and apply the CSS file -->
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" as="style"
+          onload="this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+    </noscript>
 
     {% block homepageCSS %}
         <!-- Establish network connection -->
@@ -32,12 +32,15 @@
 
         <!-- Fetch the CSS file as soon as possible -->
         <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-              as="style">
+              as="style" onload="this.rel='stylesheet'">
 
-        <!-- Apply the CSS file -->
+        <noscript>
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+        </noscript>
+        <!-- Apply the CSS file
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet"
               integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-              crossorigin="anonymous" referrerpolicy="no-referrer">
+              crossorigin="anonymous" referrerpolicy="no-referrer">-->
         <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/magnific-popup.css' %}"/>
         <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/slicknav.min.css' %}"/>
         <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/owl.carousel.min.css' %}"/>
