--- a/templates/administration/email_template/session_request_received.html
+++ b/templates/administration/email_template/session_request_received.html
@@ -101,7 +101,7 @@
                                     <td align="center" valign="top"
                                         style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 36px; font-weight: 800; line-height: 48px;"
                                         class="mobile-center">
-                                        <a href="https://icerd.co" target="_blank">
+                                        <a href="https://tchiiz.com" target="_blank">
                                             <img alt="Logo" src="https://tchiiz .com/logo"
                                                  style="display: block;
                                                     width: 100px;
