--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -56,6 +56,20 @@
    <div class="loader"></div>
 </div>-->
 
+<!-- Clarity tracking code for https://tchiiz.com/ -->
+<script>
+    (function (c, l, a, r, i, t, y) {
+        c[a] = c[a] || function () {
+            (c[a].q = c[a].q || []).push(arguments)
+        };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i + "?ref=bwt";
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+    })(window, document, "clarity", "script", "k3buy61git");
+</script>
+
 <!-- Header section  -->
 <header class="header-section">
     <a href="{% url 'homepage:index' %}" class="site-logo">
